Calendario Google con Dark mode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <i class="icon-Iconhamburguer-button"></i>
             </button>
             <a href="/" aria-current="page" aria-label="calendar" tabindex="-1"> 
-              <img src="/images/logo.png" alt="">
+              <img src="images/logo.png" alt="">
             </a>
           </div>
           <div class="calendar-status">
@@ -40,7 +40,7 @@
           <option value="">Semana</option>
           <option value="">Día</option>
         </select>
-        <img src="/images/User.png" alt="">
+        <img src="images/User.png" alt="">
       </div>
       
       </header>
